<resources>
    <string name="app_name">List Exercise</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">next</string>
    <string name="back">back</string>
    <string name="send_info_by_whatsapp">Send info by whatsapp</string>
    <string name="created_at">Created At:</string>
    <string name="data_set">Data set:</string>
    <string name="operations">Operations:</string>
    <string name="url">Url:</string>
    <string name="resource">Resource:</string>
    <string name="organization">Organization:</string>
    <string name="fact">Fact:</string>
    <string name="columns">Columns:</string>
    <string name="slug">Slug:</string>
    <string name="date_insert">Date Insert:</string>
    <string name="id">id:</string>
    <string name="messageWhatsapp">Install whatsapp first pls!</string>
    <string name="messageError1_title">You don t have internet connection</string>
    <string name="messageError1_message">When you turn on you wifi select refresh, or exit for end the application</string>
    <string name="messageError1_bt_positive">Refresh</string>
    <string name="messageError1_bt_negative">Exit</string>
    <string name="toastPermission_adjust">You have to give permission by adjust</string>
    <string name="toastPermission_accepted">Thanks</string>
    <string name="toastPermission_denied">Ok, you can give us permission when you like it</string>
    <string name="gob_url">https://api.datos.gob.mx/v1/</string>
    <string name="gob_listEndpoint">gobmx.facts</string>
    <string name="welcome">Welcome</string>
    <string name="apiErrorMessage">Sorry, the backend is not working</string>
</resources>